add form template

--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "src/assets/fonts/Acumin Pro/stylesheet.css"
+              "src/styles.css"
+            
             ],
             "scripts": []
           },
